# nix-cargo

./: .gitignore  Cargo.toml  README.md  TODO.md  driver.nix  flake.nix
crates/nix-libstore/: Cargo.toml
crates/nix-libstore/src/: derivation.rs  derived_path.rs  lib.rs  placeholder.rs  prelude.rs  store_path.rs
crates/nix-tool/: Cargo.toml  README.md
examples/: check-all.sh  incremental-benchmark-baseline-check.sh  incremental-benchmark-large.sh  incremental-benchmark-matrix-baseline-check.sh  incremental-benchmark-matrix.sh  incremental-benchmark.sh  integration-check.sh  multi-build-script-check.sh  pipelining-manifest-check.sh  proc-macro-check.sh  strict-planner-failure-check.sh  target-layout-check.sh  target-triple-check.sh  typed-driver-check.sh
examples/benchmark-baselines/: incremental-large.json  incremental-small.json  matrix-repo.json
examples/benchmark-matrix-scenarios/: README.md  large.tsv  repo.tsv
examples/failing-workspace/: Cargo.toml
examples/incremental-workspace/: Cargo.toml
examples/incremental-workspace-large/: Cargo.toml
examples/multi-build-script-workspace/: Cargo.toml
examples/proc-macro-workspace/: Cargo.toml
examples/target-layout-workspace/: Cargo.toml
lib/: mk-driver.nix
src/: cargo_home.rs  cargo_plan.rs  command_layout.rs  command_script.rs  libstore_backend.rs  main.rs  model.rs  nix_cargo_home_emit.rs  nix_crate_plan_emit.rs  nix_emit.rs  nix_emit_model.rs  nix_header_emit.rs  nix_package_derivation_emit.rs  nix_public_attrs_emit.rs  nix_string.rs  plan_package.rs  source_scope.rs  workspace.rs
(+50 files in other folders)
