[workspace]
members = [".", "crates/*"]

[package]
name = "nix-cargo"
version = "0.1.0"
edition = "2021"
description = "Experimental Rust + Nix dynamic derivations research scaffold"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo = "0.94"
cargo-util = "0.2.26"
toml = "0.8"
base64 = "0.22"
nix-libstore = { path = "crates/nix-libstore" }
nix-tool = { path = "crates/nix-tool" }
